intTests/test_type_errors/err033.log.good
 Loading file "err033.saw"
 Parse error at err033.saw:7:18-7:19: Unexpected `='
FAILED
