intTests/test_type_errors/err033.saw
//
// Not enough arguments for type constructor: monads
//
// Currently this is a parser message; the kind mismatch message in
// the typechecker is unreachable.

let x : TopLevel = false;
